@@ -59,6 +59,7 @@ class ProcessorParser {
 	void	startLuminanceStretching(const attr_t& attrs);
 	void	startSum(const attr_t& attrs);
 	void	startLRGB(const attr_t& attrs);
+	void	startGamma(const attr_t& attrs);
 public:
 	ProcessorParser();
 	void	startElement(const std::string& name, const attr_t& attrs);
